[gd_scene load_steps=10 format=2]

[ext_resource path="res://objects/scripts/move/schatzi_move.gd" type="Script" id=1]
[ext_resource path="res://objects/characters/Target.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/scripts/anim/schatzi_anim.gd" type="Script" id=3]
[ext_resource path="res://vox/schatzi.vox" type="ArrayMesh" id=4]
[ext_resource path="res://vox/schatzi_run1.vox" type="ArrayMesh" id=5]
[ext_resource path="res://vox/schatzi_run2.vox" type="ArrayMesh" id=6]
[ext_resource path="res://vox/schatzi_run3.vox" type="ArrayMesh" id=7]
[ext_resource path="res://vox/schatzi_run4.vox" type="ArrayMesh" id=8]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 8.41879, 3.40853, 2.87058 )

[node name="Schatzi" type="KinematicBody"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.9, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Target" parent="." index="1" instance=ExtResource( 2 )]

[node name="Animation" type="Spatial" parent="." index="2"]

script = ExtResource( 3 )

[node name="Idle" type="MeshInstance" parent="Animation" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 4 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="Run1" type="MeshInstance" parent="Animation" index="1"]

visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 5 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="Run2" type="MeshInstance" parent="Animation" index="2"]

visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 6 )
skeleton = NodePath("..")
material/0 = null

[node name="Run3" type="MeshInstance" parent="Animation" index="3"]

visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 7 )
skeleton = NodePath("..")
material/0 = null

[node name="Run4" type="MeshInstance" parent="Animation" index="4"]

visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 8 )
skeleton = NodePath("..")
material/0 = null


